Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107170

fatal error: 'qtranslation.h' file not found

    XMLWordPrintable

Details

    • macOS
    • eecefbf5f5 (qt/qtconnectivity/dev) eecefbf5f5 (qt/tqtc-qtconnectivity/dev)

    Description

      src/bluetooth/CMakeFiles/Bluetooth.dir/darwin/uistrings.cpp.o -c /Users/qt/work/qt/qtconnectivity/src/bluetooth/darwin/uistrings.cpp
      agent:2022/10/03 17:49:40 build.go:394: /Users/qt/work/qt/qtconnectivity/src/bluetooth/darwin/uistrings.cpp:6:10: fatal error: 'qtranslation.h' file not found
      agent:2022/10/03 17:49:40 build.go:394: #include <qtranslation.h>
      agent:2022/10/03 17:49:40 build.go:394:          ^~~~~~~~~~~~~~~~
      agent:2022/10/03 17:49:40 build.go:394: 1 error generated.
      agent:2022/10/03 17:49:40 build.go:394: Sccache command failed, re-try calling build tool directly
      agent:2022/10/03 17:49:40 build.go:394: /Users/qt/work/qt/qtconnectivity/src/bluetooth/darwin/uistrings.cpp:6:10: fatal error: 'qtranslation.h' file not found
      agent:2022/10/03 17:49:40 build.go:394: #include <qtranslation.h>
      agent:2022/10/03 17:49:40 build.go:394:          ^~~~~~~~~~~~~~~~
      agent:2022/10/03 17:49:40 build.go:394: 1 error generated.
      

      Build log: https://testresults.qt.io/logs/qt/qtconnectivity/55090e59d7ada8cd140aca110bc3031fe05e184a/MacOSMacOS_12x86_64MacOSMacOS_12x86_64Clangqtci-macos-12-x86_64-105-a2546cSccache_UseConfigure_WarningsAreErrors/39899866d3bda0fc7b56e07c92901275c3193e90/build_1678557978/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtconnectivity/tasks/1678557902

      Tested changes (refs/builds/qtci/dev/1664819244):
      https://codereview.qt-project.org/c/qt/qtconnectivity/+/436329/2 Update dependencies on 'dev' in qt/qtconnectivity

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            semlanik Alexey Edelev
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes