Complete renaming of qtranslation.h to qttranslation.h

Fixes: QTBUG-107170
Change-Id: I800c730e313097d1b550e592dcde7b0ae640cae9
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>